fixed map image

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <img
               class="map-footer"
               alt="Map of the venue"
-              src="./images/map.png"
+              src="./images/Map.jpg"
             />
           </a>
         </div>
